--- a/GUNLUK/GUNLUK.csproj
+++ b/GUNLUK/GUNLUK.csproj
@@ -731,6 +731,7 @@
     <Content Include="ckfinder\skins\v1\skin.js" />
     <Content Include="ckfinder\skins\v1\uipanel.css" />
     <Content Include="ckfinder\translations.txt" />
+    <Content Include="Default.aspx" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -741,6 +742,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
     <Content Include="admin\Yorum.aspx" />
   </ItemGroup>
@@ -779,6 +781,20 @@
     </Compile>
     <Compile Include="admin\Yonetim.Master.designer.cs">
       <DependentUpon>Yonetim.Master</DependentUpon>
+    </Compile>
+    <Compile Include="AnaSayfa.Master.cs">
+      <DependentUpon>AnaSayfa.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AnaSayfa.Master.designer.cs">
+      <DependentUpon>AnaSayfa.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="KATEGORI.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -851,6 +867,7 @@
     <Content Include="ckfinder\skins\kama\images\toolbar\Thumbs.db" />
     <Content Include="ckfinder\skins\v1\images\toolbar\Thumbs.db" />
     <Content Include="ckfinder\userfiles\.htaccess" />
+    <Content Include="AnaSayfa.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
